// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lines [common] example testing should match snapshot(s) for basic 1`] = `
<g
  className="lucid-Lines"
>
  <g
    key="0"
  >
    <Line
      color="color-chart-3"
      d="M0,0L160,360L320,360L480,340L640,320L800,0L800,0L640,320L480,340L320,360L160,360L0,0Z"
      isDotted={false}
    />
  </g>
  <g
    key="1"
  >
    <Line
      color="color-chart-0-darkest"
      d="M0,40L160,340L320,320L480,280L640,240L800,40L800,40L640,240L480,280L320,320L160,340L0,40Z"
      isDotted={false}
    />
  </g>
  <g
    key="2"
  >
    <Line
      color="color-chart-2"
      d="M0,80L160,320L320,300L480,260L640,220L800,80L800,80L640,220L480,260L320,300L160,320L0,80Z"
      isDotted={false}
    />
  </g>
  <g
    key="3"
  >
    <Line
      color="color-chart-4-lightest"
      d="M0,120L160,280L320,280L480,260L640,240L800,120L800,120L640,240L480,260L320,280L160,280L0,120Z"
      isDotted={false}
    />
  </g>
  <g
    key="4"
  >
    <Line
      color="color-chart-5"
      d="M0,160L160,240L320,220L480,260L640,300L800,160L800,160L640,300L480,260L320,220L160,240L0,160Z"
      isDotted={false}
    />
  </g>
  <g
    key="5"
  >
    <Line
      color="color-chart-1-light"
      d="M0,200L160,220L320,200L480,320L640,320L800,200L800,200L640,320L480,320L320,200L160,220L0,200Z"
      isDotted={false}
    />
  </g>
  <g
    key="6"
  >
    <Line
      color="color-chart-6"
      d="M0,240L160,280L320,340L480,360L640,340L800,240L800,240L640,340L480,360L320,340L160,280L0,240Z"
      isDotted={false}
    />
  </g>
</g>
`;

exports[`Lines [common] example testing should match snapshot(s) for basic 2`] = `
<g
  className="lucid-Lines"
>
  <g
    key="0"
  >
    <Line
      color="color-chart-3"
      d="M0,400L160,400L320,400L480,400L640,400L800,400L800,318.36734693877554L640,383.6734693877551L480,387.7551020408163L320,391.83673469387753L160,391.83673469387753L0,318.36734693877554Z"
      isDotted={false}
    />
  </g>
  <g
    key="1"
  >
    <Line
      color="color-chart-0-darkest"
      d="M0,318.36734693877554L160,391.83673469387753L320,391.83673469387753L480,387.7551020408163L640,383.6734693877551L800,318.36734693877554L800,244.89795918367346L640,351.0204081632653L480,363.265306122449L320,375.51020408163265L160,379.59183673469386L0,244.89795918367346Z"
      isDotted={false}
    />
  </g>
  <g
    key="2"
  >
    <Line
      color="color-chart-2"
      d="M0,244.89795918367346L160,379.59183673469386L320,375.51020408163265L480,363.265306122449L640,351.0204081632653L800,244.89795918367346L800,179.5918367346939L640,314.2857142857143L480,334.6938775510204L320,355.1020408163265L160,363.265306122449L0,179.5918367346939Z"
      isDotted={false}
    />
  </g>
  <g
    key="3"
  >
    <Line
      color="color-chart-4-lightest"
      d="M0,179.5918367346939L160,363.265306122449L320,355.1020408163265L480,334.6938775510204L640,314.2857142857143L800,179.5918367346939L800,122.44897959183675L640,281.63265306122446L480,306.1224489795918L320,330.61224489795916L160,338.7755102040816L0,122.44897959183675Z"
      isDotted={false}
    />
  </g>
  <g
    key="4"
  >
    <Line
      color="color-chart-5"
      d="M0,122.44897959183675L160,338.7755102040816L320,330.61224489795916L480,306.1224489795918L640,281.63265306122446L800,122.44897959183675L800,73.46938775510205L640,261.2244897959184L480,277.55102040816325L320,293.8775510204082L160,306.1224489795918L0,73.46938775510205Z"
      isDotted={false}
    />
  </g>
  <g
    key="5"
  >
    <Line
      color="color-chart-1-light"
      d="M0,73.46938775510205L160,306.1224489795918L320,293.8775510204082L480,277.55102040816325L640,261.2244897959184L800,73.46938775510205L800,32.65306122448976L640,244.89795918367346L480,261.2244897959184L320,253.0612244897959L160,269.38775510204084L0,32.65306122448976Z"
      isDotted={false}
    />
  </g>
  <g
    key="6"
  >
    <Line
      color="color-chart-6"
      d="M0,32.65306122448976L160,269.38775510204084L320,253.0612244897959L480,261.2244897959184L640,244.89795918367346L800,32.65306122448976L800,0L640,232.6530612244898L480,253.0612244897959L320,240.81632653061226L160,244.89795918367346L0,0Z"
      isDotted={false}
    />
  </g>
</g>
`;

exports[`Lines [common] example testing should match snapshot(s) for custom-colors 1`] = `
<g
  className="lucid-Lines"
>
  <g
    key="0"
  >
    <Line
      color="color-chart-bad"
      d="M0,380L200,360L400,360L600,340L800,320L1000,0L1000,0L800,320L600,340L400,360L200,360L0,380Z"
      isDotted={false}
    />
  </g>
  <g
    key="1"
  >
    <Line
      color="color-chart-good"
      d="M0,360L200,340L400,320L600,280L800,240L1000,240L1000,240L800,240L600,280L400,320L200,340L0,360Z"
      isDotted={false}
    />
  </g>
  <g
    key="2"
  >
    <Line
      color="#ff8800"
      d="M0,340L200,320L400,300L600,260L800,220L1000,220L1000,220L800,220L600,260L400,300L200,320L0,340Z"
      isDotted={false}
    />
  </g>
  <g
    key="3"
  >
    <Line
      color="#abc123"
      d="M0,300L200,280L400,280L600,260L800,240L1000,380L1000,380L800,240L600,260L400,280L200,280L0,300Z"
      isDotted={false}
    />
  </g>
</g>
`;
